# npw-edge

./: CMakeLists.txt  NPW_data.txt  README.md  config.json  config_bv.json  config_gateway.json  config_station.json  edge.service  simulated_values.txt
configs/: config_BV61.json  config_BV62.json  config_BV63.json  config_BV64.json  config_BV65.json  config_BV66.json  config_BV66A.json  config_BV69.json  config_BV70.json  config_BV70A.json  config_BV71.json  config_BV72.json  config_BV72A.json  config_BV74A.json  config_BV75.json  config_BV76.json  config_FSD1.json  config_FSD2.json  config_KBS.json  config_MCK.json  config_MKT.json  config_MW17.json  config_MW18.json  config_MW19.json  config_MW20.json  config_MW21.json  config_MW22.json  config_MW23.json  config_MW24.json  config_MW25.json
gpsConfigs/: filePaths.txt  gpsd.service
include/: CommDataBuffer.h  CommandMsg.h  DelayFlag.h  DevConfig.h  EdgeDevice.h  FlowTransmitter.h  FtPeriodicValue.h  HeartbeatBuffer.h  MqttHandler.h  NpwBuffer.h  PeriodicValue.h  PressureSensor.h  RadioCommunicator.h  RawValuesBuffer.h  Sensor.h  SensorReading.h  SerialComPort.h  StationEdgeDevice.h  TemperatureSensor.h  communicator.h  serialPort.h  simulatedValues.h
src/: CommDataBuffer.cpp  CommandMsg.cpp  DelayFlag.cpp  EdgeDevice.cpp  FlowTransmitter.cpp  FtPeriodicValue.cpp  HeartbeatBuffer.cpp  MqttHandler.cpp  NPWEdge.cpp  NpwBuffer.cpp  PeriodicValue.cpp  PressureSensor.cpp  RadioCommunicator.cpp  RawValuesBuffer.cpp  Sensor.cpp  SensorReading.cpp  SerialComPort.cpp  StationEdgeDevice.cpp  TemperatureSensor.cpp  (+2 more)
(+5 files in other folders)
